<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/viewDialogLoc"
    android:background="@color/md_white">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="8dp"
            android:paddingRight="8dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/locKetQua"
                android:textSize="16sp"
                android:gravity="center_vertical"
                android:textStyle="bold"
                android:textColor="@color/md_black"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/soLuongNhaNghi"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/md_blue_700"/>

                <com.jaygoo.widget.RangeSeekBar
                    android:id="@+id/seekbar1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:rsb_markTextArray="@array/markArray"
                    app:rsb_lineColorSelected="@color/md_red_500"
                    app:rsb_lineColorEdge="@color/colorSeekBarDefault"
                    app:rsb_cellMode="number"
                    app:rsb_reserve="10"
                    app:rsb_seekBarMode="range" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/md_grey_500"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/md_grey_100"
                android:layout_marginTop="12dp"
                android:gravity="center">
                <Button
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/datLai"
                    android:id="@+id/btnDatLai"
                    android:background="@drawable/bg_button_white"
                    android:textSize="14sp"/>

                <Button
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/hoanTat"
                    android:background="@drawable/bg_button_primary"
                    android:textSize="14sp"
                    android:textColor="@color/md_white"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</RelativeLayout>
