<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_white"
    tools:context=".ui.activity.DetailActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_alignParentTop="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="200dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="180dp">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/imgAnhDaiDien"
                    android:scaleType="fitXY"
                    android:src="@drawable/nha_nghi_3"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/md_black"
                    android:alpha="0.2"/>
            </RelativeLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/lvDanhSachPhongNoiBat"
                android:scrollbars="horizontal"
                android:layout_width="match_parent"
                style="@style/scrollbar_shape_style"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nhà nghỉ Nhật Minh"
                android:textSize="16sp"
                android:textStyle="bold"
                android:id="@+id/txtTenNhaNghi"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:background="@drawable/bg_button_blue_500"
                android:text="@string/nhaNghi"
                android:textSize="12sp"
                android:id="@+id/btnLoaiHinh"
                android:layout_marginLeft="10dp"
                android:textColor="@color/md_white"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:id="@+id/txtDiaChiNhaNghi"
                android:text="Nghĩa Tân, Hà Nội, Việt Nam"
                android:textSize="12sp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="4dp"
                android:background="@color/md_grey_300"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/danhGia"
                android:textAllCaps="true"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:textStyle="bold"
                android:layout_gravity="center"/>

            <com.willy.ratingbar.ScaleRatingBar
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/simpleRatingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:srb_numStars="5"
                app:srb_rating="4"
                app:srb_starWidth="25dp"
                app:srb_starHeight="25dp"
                app:srb_starPadding="2dp"
                app:srb_stepSize="0.5"
                app:srb_isIndicator="true"
                app:srb_scrollable="true"
                app:srb_clickable="false"
                app:srb_clearRatingEnabled="true">
            </com.willy.ratingbar.ScaleRatingBar>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="Từ 11 khách lưu trú"
                android:layout_gravity="center"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:background="@color/md_white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:id="@+id/viewBinhLuan"
                android:weightSum="10">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:text="@string/xemBinhLuan"
                    android:textColor="@color/md_blue_500" />

                <!--<ImageView-->
                    <!--android:layout_width="15dp"-->
                    <!--android:layout_height="15dp"-->
                    <!--android:layout_marginRight="10dp"-->
                    <!--android:src="@drawable/ic_arrow_right" />-->
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="4dp"
                android:background="@color/md_grey_300"/>
            <!--miêu tả-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/mieuTa"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:maxLines="3"
                android:ellipsize="end"
                android:id="@+id/txtMieuTaChiTiet"
                android:text="@string/mieuTaNhaNghi"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:id="@+id/viewXemChiTiet"
                android:layout_marginBottom="10dp"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/xemChiTiet"
                    android:id="@+id/txtXemChiTiet"
                    android:textColor="@color/md_blue_500"
                    />
                <ImageView
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_marginLeft="10dp"
                    android:id="@+id/imgXemChiTiet"
                    android:tint="@color/md_blue_500"
                    android:src="@drawable/ic_arrow_down"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="4dp"
                android:background="@color/md_grey_300"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/loaiPhong"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/viewDanhSachPhong"/>

            <ListView
                android:id="@+id/lvDanhSachPhong"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="30dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"/>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:id="@+id/viewChonDanhSachPhong"
        android:gravity="center"
        android:background="@color/md_grey_200"
        android:weightSum="10"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_weight="6">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_marginTop="6dp"
                android:text="@string/giaPhongMoiDem"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtGiaPhongMoiDem"
                android:textStyle="bold"
                android:textColor="@color/md_orange_800"
                android:textSize="20sp"
                android:textAllCaps="true"
                android:text="200,000 VND"/>


        </LinearLayout>

        <Button
            android:layout_width="120dp"
            android:layout_height="36dp"
            android:textColor="@color/md_white"
            android:text="@string/chonPhong"
            android:id="@+id/btnChon"
            android:background="@drawable/bg_button_orange_700"/>
    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/md_blue_500"
        android:visibility="gone"
        android:text="@string/title_chi_tiet"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textColor="@color/md_white"
        android:gravity="center"
        android:id="@+id/txtTittleNhaNghi"/>
    <ImageView
        android:layout_width="40dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_back_3"
        android:id="@+id/icBack"/>
</RelativeLayout>
