<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_dialog">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10"
            android:layout_gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtHeaderDialog"
                android:textColor="@color/md_grey_800"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginTop="8dp"
                android:textSize="16sp"
                android:textAllCaps="true"
                android:text="@string/datPhong"/>

        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtNoiDungThongBao"
            android:textColor="@color/md_grey_800"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="10dp"
            android:textSize="16sp"
            android:layout_gravity="top"
            android:text="@string/chonSoLuongPhong"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:weightSum="10">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.5"
                android:textColor="@color/md_grey_800"
                android:text="@string/soLuong"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="7"
                android:id="@+id/txtSoPhong"
                android:inputType="number"
                android:paddingLeft="6dp"
                android:textSize="16sp"
                android:text="1"
                android:background="@drawable/bg_edit_text"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:weightSum="10">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.5"
                android:textColor="@color/md_grey_800"
                android:text="@string/ngayDat"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="7"
                android:id="@+id/txtNgayDat"
                android:inputType="number"
                android:paddingLeft="6dp"
                android:textSize="16sp"
                android:gravity="center_vertical"
                android:text="7/3/2018 8:18"
                android:background="@drawable/bg_edit_text"/>
        </LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/btnTiepTuc"
            android:background="@drawable/bg_button_corner_left_right_bottom"
            android:textSize="16sp"
            android:textColor="@color/md_white"
            android:text="@string/datPhong"/>
    </LinearLayout>

    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_gravity="center"
        android:id="@+id/imgExit"
        android:layout_marginRight="4dp"
        android:src="@drawable/ic_exit"
        android:layout_alignParentRight="true" />
</RelativeLayout>
